--- a/style.css
+++ b/style.css
@@ -3,3 +3,26 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+main {
+  margin:0 auto;
+  max-width: 960px;
+}
+
+.grid-container{
+  height: 960px;
+  border: 1px solid lightcyan;
+  margin-top: 2.5em;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+
+.cell{
+  border: 1px solid black;
+  background-color: crimson;
+  flex-basis: 10%;  /* value calculated using 100% / size of grid (e.g. 16) */
+}
+
+
+
