--- a/style.css
+++ b/style.css
@@ -14,14 +14,14 @@ main {
   border: 1px solid lightcyan;
   margin-top: 2.5em;
   display: flex;
-  justify-content: flex-start;
   flex-wrap: wrap;
 }
 
 .cell{
   border: 1px solid black;
   background-color: crimson;
-  flex-basis: 10%;  /* value calculated using 100% / size of grid (e.g. 16) */
+
+  /* flex-basis: 10%;  value calculated using 100% / size of grid (e.g. 16) */
 }
 
 
