Add script to test onclick event on grid

--- a/style.css
+++ b/style.css
@@ -11,17 +11,19 @@ main {
 
 .grid-container{
   height: 960px;
-  border: 1px solid lightcyan;
+  border: 1px solid rgba(0, 0, 0, 0.5);
   margin-top: 2.5em;
   display: flex;
   flex-wrap: wrap;
 }
 
 .cell{
-  border: 1px solid black;
-  background-color: crimson;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  /* background-color: chocolate; */
+}
 
-  /* flex-basis: 10%;  value calculated using 100% / size of grid (e.g. 16) */
+.cell:hover{
+
 }
 
 
