--- a/style.css
+++ b/style.css
@@ -4,27 +4,24 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: seashell;
+}
+
 main {
   margin:0 auto;
-  max-width: 960px;
+  max-width: 800px;
 }
 
 .grid-container{
-  height: 960px;
-  border: 1px solid rgba(0, 0, 0, 0.5);
-  margin-top: 2.5em;
+  height: 800px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  margin-top: 1.5em;
   display: flex;
   flex-wrap: wrap;
 }
 
 .cell{
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  /* background-color: chocolate; */
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
-
-.cell:hover{
-
-}
-
-
 
