--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,100&display=swap');
+
 *{
   margin: 0;
   padding: 0;
@@ -5,23 +7,68 @@
 }
 
 body {
-  background-color: #fefeff;
+  background-color: #2b2b2f;
+  font-family: 'Roboto', sans-serif;
 }
 
 main {
-  margin:0 auto;
-  max-width: 800px;
+  max-width: 720px;
+  margin: 0 auto;
 }
 
-.grid-container{
-  height: 800px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  margin-top: 1.5em;
+h1{
+  color: #fefeff;
+  font-size: 2.5em;
+  padding-top: 0.5em;
+}
+
+.btn {
+  font-size: 0.9em;
+  color:#fefeff;
+  text-decoration:none;
+  font-weight: 300;
+  text-align:center;
+  background-color: #2b2b2f;
+  display:inline-block;
+  padding:0.5em 1.2em;
+  margin: 1.5em 0 1em 0.45em;
+  border-radius: 0.33em;
+  border: 0.1em solid #fefeff;
+  transition: all 0.45s;
+}
+
+.btn:hover{
+  color: #2b2b2f;
+  background-color: #fefeff;
+}
+
+.grid-container {
+  max-width: 98%;
+  background-color: #fefeff;
+  aspect-ratio: 1 / 1;
+  border: none;
+  margin: 0 auto 0.5em;
   display: flex;
   flex-wrap: wrap;
 }
 
 .cell{
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(36, 36, 36, 0.1);
+  transition: all 0.28s;
 }
 
+footer{
+  text-align: center;
+  padding: 0.8em;
+  color: #fefeff;
+}
+
+footer p{
+  font-size: 0.75em;
+  font-weight: 500;
+}
+
+footer a {
+  text-decoration: none;
+  color: #90CCF4;
+}
